--- a/Pet Care Assistant/Views/PetListPage.xaml
+++ b/Pet Care Assistant/Views/PetListPage.xaml
@@ -4,32 +4,19 @@
              x:Class="Pet_Care_Assistant.Views.PetListPage"
              Title="PetListPage">
     <VerticalStackLayout>
-        <!--<Label 
-            Text="Aici vreau sa testez daca se extrag bine rasele de caini sau ce naiba extragem noi din xml si eventual sa avem un dropdown list cu rase de caini sau pisici - cand introducem un animalut nou"
-            VerticalOptions="Center" 
-            HorizontalOptions="Center" />-->
-
-        <!--<Label x:Name="DebugLabel"
-               Text="Loading..."
-               FontSize="14"
-               LineBreakMode="WordWrap" />-->
-
         <Label Text="Choose a dog breed from the list below:" FontAttributes="Bold" />
 
         <Picker x:Name="BreedPicker" Title="Choose breed" />
 
         <Label x:Name="SelectedBreedLabel" Text="Selected: none" />
 
-        <!--<CollectionView x:Name="BreedsCollection" SelectionMode="Single" HeightRequest="400">
+        
+        <!-- aici e o functionalitate ce imi afiseaza toate rasele de caini extrase din JSON. Este legata din HomeViewModel.cs -> cu MVVM-->
+        
+        <!--<CollectionView ItemsSource="{Binding DogBreeds}">
             <CollectionView.ItemTemplate>
                 <DataTemplate>
-                    <Frame Padding="8" Margin="0,4" HasShadow="True" CornerRadius="6">
-                        <VerticalStackLayout>
-                            <Label Text="{Binding Breed}" FontAttributes="Bold" />
-                            <Label Text="{Binding Origin}" FontAttributes="Italic" FontSize="Micro" />
-                            <Label Text="{Binding Temperament}" FontSize="Small" LineBreakMode="WordWrap" MaxLines="3" />
-                        </VerticalStackLayout>
-                    </Frame>
+                    <Label Text="{Binding Breed}"></Label>
                 </DataTemplate>
             </CollectionView.ItemTemplate>
         </CollectionView>-->
