--- a/Pet Care Assistant/Views/PetListPage.xaml
+++ b/Pet Care Assistant/Views/PetListPage.xaml
@@ -2,7 +2,7 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="Pet_Care_Assistant.Views.PetListPage"
-             Title="PetListPage">
+             Title="Add a pet">
     <ScrollView>
         <VerticalStackLayout Padding="16" Spacing="8">
 
